# exw-virtuals-app

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
scripts/: configure-cuda.sh  configure-hip.sh  configure-host.sh  configure-intel-openmp.sh  configure-intel-sycl.sh
src/: Algorithm.cpp  Algorithm.hpp  CMakeLists.txt  Kernel.hpp  kokkos_interface.hpp  main.cpp  ngp_instance.hpp
